--- a/PROJECT 93 TO 97/kwitter_page.html
+++ b/PROJECT 93 TO 97/kwitter_page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Family Chat Room</title>
+    <title> Family Chat </title>
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
@@ -16,10 +16,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
 <body>
+
     <div class="container">
         <button id="logout" onclick="logout()" class="glyphicon glyphicon-log-out btn btn-danger">Logout</button>
         <center>
@@ -29,17 +29,18 @@
 				<img src="m2.png">
 			</sup>
             </h1>
-            <h3 id="user_name" class="color_white"></h3>
-            <div class="form-group input_div_room_page">
-                <label>#Add Room:</label>
-                <input type="text" id="room_name" class="form-control" placeholder="room name">
-            </div>
-            <button onclick="addRoom()" class="btn btn-success">#Add Room</button>
-            <h3 class="color_white">#TRENDINGROOMS</h3>
-            <div id="output"></div>
+            <div id="output" style="text-align: left;margin-bottom: 70px;"> </div>
         </center>
     </div>
-    <script src="kwitter_room.js"></script>
+
+    <center>
+        <div class="input_div_message_page">
+            <label>Send:</label>
+            <input type="text" id="msg" class="form-control" placeholder="message" <button onclick="send()" class="btn btn-success">Send</button>
+        </div>
+    </center>
+
+    <script src="kwitter_page.js"></script>
 </body>
 
 </html>
